加入查询群列表、好友列表、群成员列表、陌生人消息、查询天气等接口

--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -1,3 +1,5 @@
 ws.host=127.0.0.1
 ws.port=1970
 php.ws.url=http://localhost/coolq/wsData.php
+coolq.image.path=C:\\Downloads\\\u9177Q\\data\\image
+manager.qq=1066231345
