--- a/pom.xml
+++ b/pom.xml
@@ -354,6 +354,14 @@
                 <target>1.8</target>  
             </configuration>  
         </plugin>  
+        <!-- 打包跳过测试 -->
+        <plugin>  
+		    <groupId>org.apache.maven.plugins</groupId>  
+		    <artifactId>maven-surefire-plugin</artifactId>  
+		    <configuration>  
+		        <skip>true</skip>  
+		    </configuration>  
+		</plugin>
     </plugins>
     <finalName>coolq</finalName>
   </build>
