--- a/pom.xml
+++ b/pom.xml
@@ -319,8 +319,16 @@
 		    <artifactId>gson</artifactId>
 		    <version>2.8.0</version>
 		</dependency>
-		
-		<!-- http://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+
+	  <dependency>
+		  <groupId>com.squareup.okhttp3</groupId>
+		  <artifactId>okhttp</artifactId>
+		  <version>3.8.1</version>
+	  </dependency>
+
+
+
+	  <!-- http://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 		<!--
 			此jar包和下方的 jackson-dataformat-xml 不能同时存在，需要转换成json就导入此包，需要转换成xml就导入下方的xml包
 		 -->
@@ -363,6 +371,24 @@
 		    </configuration>  
 		</plugin>
     </plugins>
+	  <!-- 资源打包 -->
+	  <resources>
+		  <resource>
+			  <directory>src/main/resources</directory>
+			  <includes>
+				  <include>**/*.xml</include>
+				  <include>**/*.properties</include>
+			  </includes>
+			  <filtering>true</filtering>
+		  </resource>
+		  <resource>
+			  <directory>src/main/java</directory>
+			  <includes>
+				  <include>**/*.xml</include>
+			  </includes>
+			  <filtering>true</filtering>
+		  </resource>
+	  </resources>
     <finalName>coolq</finalName>
   </build>
 </project>
