（修改）消息处理架构改变，改变为处理时，通过反射进行动态调用，便于插件类的开发

--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -13,3 +13,5 @@ http.port=1970
 php.ws.url=http://localhost/coolq/wsData.php
 coolq.image.path=C:\\Downloads\\\u9177Q\\data\\image
 manager.qq=1066231345
+# 配置一个文件夹，存放所有处理消息的插件类，通过反射遍历并调用
+plugin.package.path=com.wjyup.coolq.util.service.impl
