升级版本至2.1.2

--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -1,13 +1,13 @@
 ws.host=127.0.0.1
 ws.port=1970
-# 1=websocket 2=socket
+#接收插件消息的模式：  2=http 3=socket
 ws.send.type=2
 #启用Token：1，不启用：0
 ws.use_token=0
 ws.key=
 ws.secret=
 ws.socket.port=8888
-#配置推送消息的HTTP信息
+#配置插件服务端信息
 http.host=127.0.0.1
 http.port=1970
 php.ws.url=http://localhost/coolq/wsData.php
