--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -1,17 +1,14 @@
+msg.send.type=http
+
 ws.host=127.0.0.1
 ws.port=1970
-#接收插件消息的模式：  2=http 3=socket
-ws.send.type=2
-#启用Token：1，不启用：0
-ws.use_token=0
-ws.key=
-ws.secret=
-ws.socket.port=8888
-#配置插件服务端信息
+
 http.host=127.0.0.1
 http.port=1970
-php.ws.url=http://localhost/coolq/wsData.php
+
+key=123
+
 coolq.image.path=C:\\Downloads\\\u9177Q\\data\\image
 manager.qq=1066231345
 # 配置一个文件夹，存放所有处理消息的插件类，通过反射遍历并调用
-plugin.package.path=com.wjyup.coolq.util.service.impl
+plugin.package.path=com.wjyup.coolq.service.impl.plugins
