--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -7,8 +7,11 @@ http.host=127.0.0.1
 http.port=1970
 
 key=123
+# 处理消息中包含CQ码的消息吗？
+msg.cq=false
 
 coolq.image.path=C:\\Downloads\\\u9177Q\\data\\image
 manager.qq=1066231345
 # 配置一个文件夹，存放所有处理消息的插件类，通过反射遍历并调用
 plugin.package.path=com.wjyup.coolq.service.impl.plugins
+
