修改说明和配置文件
Signed-off-by: bubucom <18658910406@163.com>

--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -1,17 +1,18 @@
+# 选择推送消息的方式：websocket http
 msg.send.type=http
-
+# 使用Websocket方式推送消息，访问插件的Websocket的Host和Port
 ws.host=127.0.0.1
 ws.port=1970
-
+# 使用HTTP方式推送消息时，访问插件的HTTP地址
 http.host=127.0.0.1
 http.port=1970
-
+# 插件端设置的值：扩展功能->数据设置->key，如果没值留空
 key=123
 # 处理消息中包含CQ码的消息吗？
 msg.cq=false
-
+# coolq图片存放路径
 coolq.image.path=C:\\Downloads\\\u9177Q\\data\\image
+# 管理员QQ，英文逗号分隔
 manager.qq=1066231345
-# 配置一个文件夹，存放所有处理消息的插件类，通过反射遍历并调用
+# 插件类(处理消息的类)所在的包
 plugin.package.path=com.wjyup.coolq.service.impl.plugins
-
