修复问题，升级插件2.1.4.4
Signed-off-by: eric <18658910406@163.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Server HTTP port.
-server.port=8080
+server.port=8888
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/coolq?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #mybatis
 mybatis.type-aliases-package=com.wjyup.coolq.entity
-mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.mapper-locations=classpath:/mapper/**/**.xml
 
 #log
 #logging.file=shopsearch.log
