--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -1,18 +1,18 @@
-# Ñ¡ÔñÍÆËÍÏûÏ¢µÄ·½Ê½£ºwebsocket http
+# é€‰æ‹©æ¨é€æ¶ˆæ¯çš„æ–¹å¼ï¼šwebsocket http
 msg.send.type=http
-# Ê¹ÓÃWebsocket·½Ê½ÍÆËÍÏûÏ¢£¬·ÃÎÊ²å¼şµÄWebsocketµÄHostºÍPort
+# ä½¿ç”¨Websocketæ–¹å¼æ¨é€æ¶ˆæ¯ï¼Œè®¿é—®æ’ä»¶çš„Websocketçš„Hostå’ŒPort
 ws.host=127.0.0.1
 ws.port=1970
-# Ê¹ÓÃHTTP·½Ê½ÍÆËÍÏûÏ¢Ê±£¬·ÃÎÊ²å¼şµÄHTTPµØÖ·
+# ä½¿ç”¨HTTPæ–¹å¼æ¨é€æ¶ˆæ¯æ—¶ï¼Œè®¿é—®æ’ä»¶çš„HTTPåœ°å€
 http.host=127.0.0.1
 http.port=1970
-# ²å¼ş¶ËÉèÖÃµÄÖµ£ºÀ©Õ¹¹¦ÄÜ->Êı¾İÉèÖÃ->key£¬Èç¹ûÃ»ÖµÁô¿Õ
+# æ’ä»¶ç«¯è®¾ç½®çš„å€¼ï¼šæ‰©å±•åŠŸèƒ½->æ•°æ®è®¾ç½®->keyï¼Œå¦‚æœæ²¡å€¼ç•™ç©º
 key=123
-# ´¦ÀíÏûÏ¢ÖĞ°üº¬CQÂëµÄÏûÏ¢Âğ£¿
+# å¤„ç†æ¶ˆæ¯ä¸­åŒ…å«CQç çš„æ¶ˆæ¯å—ï¼Ÿ
 msg.cq=false
-# coolqÍ¼Æ¬´æ·ÅÂ·¾¶
+# coolqå›¾ç‰‡å­˜æ”¾è·¯å¾„
 coolq.image.path=C:\\Downloads\\\u9177Q\\data\\image
-# ¹ÜÀíÔ±QQ£¬Ó¢ÎÄ¶ººÅ·Ö¸ô
+# ç®¡ç†å‘˜QQï¼Œè‹±æ–‡é€—å·åˆ†éš”
 manager.qq=1066231345
-# ²å¼şÀà(´¦ÀíÏûÏ¢µÄÀà)ËùÔÚµÄ°ü
+# æ’ä»¶ç±»(å¤„ç†æ¶ˆæ¯çš„ç±»)æ‰€åœ¨çš„åŒ…
 plugin.package.path=com.wjyup.coolq.service.impl.plugins
