--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -1,18 +1,18 @@
-# 选择推送消息的方式：websocket http
+# \u9009\u62E9\u63A8\u9001\u6D88\u606F\u7684\u65B9\u5F0F\uFF1Awebsocket http
 msg.send.type=http
-# 使用Websocket方式推送消息，访问插件的Websocket的Host和Port
+# \u4F7F\u7528Websocket\u65B9\u5F0F\u63A8\u9001\u6D88\u606F\uFF0C\u8BBF\u95EE\u63D2\u4EF6\u7684Websocket\u7684Host\u548CPort
 ws.host=127.0.0.1
 ws.port=1970
-# 使用HTTP方式推送消息时，访问插件的HTTP地址
+# \u4F7F\u7528HTTP\u65B9\u5F0F\u63A8\u9001\u6D88\u606F\u65F6\uFF0C\u8BBF\u95EE\u63D2\u4EF6\u7684HTTP\u5730\u5740
 http.host=127.0.0.1
 http.port=1970
-# 插件端设置的值：扩展功能->数据设置->key，如果没值留空
+# \u63D2\u4EF6\u7AEF\u8BBE\u7F6E\u7684\u503C\uFF1A\u6269\u5C55\u529F\u80FD->\u6570\u636E\u8BBE\u7F6E->key\uFF0C\u5982\u679C\u6CA1\u503C\u7559\u7A7A
 key=123
-# 处理消息中包含CQ码的消息吗？
+# \u5904\u7406\u6D88\u606F\u4E2D\u5305\u542BCQ\u7801\u7684\u6D88\u606F\u5417\uFF1F
 msg.cq=false
-# coolq图片存放路径
+# coolq\u56FE\u7247\u5B58\u653E\u8DEF\u5F84
 coolq.image.path=C:\\Downloads\\\u9177Q\\data\\image
-# 管理员QQ，英文逗号分隔
+# \u7BA1\u7406\u5458QQ\uFF0C\u82F1\u6587\u9017\u53F7\u5206\u9694
 manager.qq=1066231345
-# 插件类(处理消息的类)所在的包
+# \u63D2\u4EF6\u7C7B(\u5904\u7406\u6D88\u606F\u7684\u7C7B)\u6240\u5728\u7684\u5305
 plugin.package.path=com.wjyup.coolq.service.impl.plugins
